# itmo-parallel-computing

./: .gitignore  CMakeLists.txt  Makefile  README.md  create-csv-file.sh  find-size.sh  framewave.sh  ipp.sh  mkl.sh  prepare-system.sh
csv/: lab1-par-4.csv  lab1-par-8.csv  lab2-par-2.csv  lab3-par-dynamic-1-2.csv  lab3-par-dynamic-1-4.csv  lab3-par-dynamic-100-1.csv  lab3-par-dynamic-100-4.csv  lab3-par-guided-1-1.csv  lab3-par-guided-1-2.csv  lab3-par-static-1-1.csv  lab3-par-static-1-2.csv  lab3-par-static-1-4.csv  lab3-par-static-100-4.csv  lab4-par-dynamic-2.csv  lab4-par-dynamic-4.csv  lab4-par-guided-2.csv  lab4-par-guided-4.csv  lab4-par-static-2.csv  lab4-par-static-4.csv  lab4-seq.csv  lab5-par-static-2.csv  lab5-par-static-4.csv  lab6-par-static-2.csv  lab6-par-static-4.csv  seq.csv
lab1/: CMakeLists.txt  Makefile  create-csv-file.sh  lab1.c  par-2.csv  par-4.csv  par-5.csv  par-8.csv  seq.csv
lab2/: CMakeLists.txt  Makefile  README.md  create-csv-file.sh  find-size.sh  ipp.sh  lab2.c  mkl.sh  par-2.csv  par-5.csv  setup.sh
lab3/: README.md
lab4/: README.md
lib/: README.md
src/: lab1.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c  lab6.cl
